--- a/people/faculty.html
+++ b/people/faculty.html
@@ -1,15 +1,34 @@
 ---
-layout: default_style
-permalink: /people/faculty
+layout: faculty_page
+title: Faculty
+permalink: /people/faculty/
 ---
-<!-- Main Container -->
 
-{% assign gallery = site.faculty %}
+<h1 style="text-align: center;">Faculty Affiliates</h1>
 
-<div class="container center">
-  <div class="row">
-{% include rogues_gallery %}
+<div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; padding: 1rem 0;">
+  {% for person in site.data.faculty %}
+  <div style="width: 260px; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); text-align: center;">
+
+    {% if person.image_url %}
+    <img src="{{ person.image_url }}" alt="{{ person.name }}" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 0.75rem;">
+    {% endif %}
+
+    <h3 style="margin-bottom: 0.5rem; font-size: 1.1rem;">{{ person.name }}</h3>
+
+    <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">{{ person.areas }}</p>
+
+    {% if person.website %}
+    <p style="margin: 0.5rem 0;"><a href="{{ person.website }}" target="_blank">Website</a></p>
+    {% endif %}
+
+    {% if person.phone %}
+    <p style="font-size: 0.85rem;">📞 {{ person.phone }}</p>
+    {% endif %}
+
+    {% if person.office %}
+    <p style="font-size: 0.85rem;">📍 {{ person.office }}</p>
+    {% endif %}
   </div>
+  {% endfor %}
 </div>
-
-<!--End Main Container -->
