--- a/people/students.html
+++ b/people/students.html
@@ -1,32 +1,26 @@
 ---
-layout: default_style
+layout: student_page
+title: Students
 permalink: /people/students
-left_gallery:
-  - image_url: ../assets/img/students/max-hollingsworth.png
-    name: Max Hollingsworth
-    area: Wireless Networks, Security
-    url: https://www.colorado.edu/cs
-  - image_url: ../assets/img/team/member1.png
-    name: Team Member 1
-    area: Something Else
-right_gallery:
-  - image_url: ../assets/img/team/jason-zhang.jpg
-    name: Jason Zhang
-    area: Ubiquitous Computing and Computational Social Science
-  - image_url: ../assets/img/team/member2.png
-    name: Team Member 2
-    area: Something Else
 ---
-<!-- Main Container -->
 
+<h1 style="text-align: center;">Current Students</h1>
 
-{% assign gallery = site.students %}
+<div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; padding: 1rem 0;">
+  {% for student in site.data.students %}
+  <div style="width: 260px; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); text-align: center;">
 
-<div id="banners"></div>
-  <div class="container">
-    <div class="row">
-{% include rogues_gallery %}
-    </div>
+    {% if student.image_url %}
+    <img src="{{ student.image_url }}" alt="{{ student.name }}" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 0.75rem;">
+    {% endif %}
+
+    <h3 style="margin-bottom: 0.5rem; font-size: 1.1rem;">{{ student.name }}</h3>
+
+    <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">{{ student.area }}</p>
+
+    {% if student.url %}
+    <p style="margin: 0.5rem 0;"><a href="{{ student.url }}" target="_blank">Profile</a></p>
+    {% endif %}
   </div>
+  {% endfor %}
 </div>
-<!--End Main Container -->
