--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ layout: default_style
     <a href="#about" class="text-primary" style="margin-right: 15px;"><strong>About</strong></a>
     <a href="#research-areas" class="text-primary" style="margin-right: 15px;"><strong>Research Areas</strong></a>
     <a href="#faculty" class="text-primary" style="margin-right: 15px;"><strong>Faculty</strong></a>
-    <a href="/gallery" class="text-primary" style="margin-right: 15px;"><strong>Gallery</strong></a>
+    <a href="{{ '/gallery' | relative_url }}" class="text-primary" style="margin-right: 15px;"><strong>Gallery</strong></a>
     <a href="#contact" class="text-primary"><strong>Contact Us</strong></a>
 </div>
+
 <!-- Lab banner image -->
 <div class="container text-center" style="margin-top: 20px; margin-bottom: 20px;">
-    <img src="/assets/img/banner.jpg" alt="Lab Group Photo" class="img-responsive" style="max-width: 100%; height: auto;">
+    <img src="{{ '/assets/img/banner.jpg' | relative_url }}" alt="Lab Group Photo" class="img-responsive" style="max-width: 100%; height: auto;">
 </div>
-
 
 <!-- About Section -->
 <section id="about" class="section-global-wrapper">
@@ -26,7 +26,6 @@ layout: default_style
         <p>Students and faculty receive funding for and work in areas including large scale network systems; cloud and edge computing; distributed systems; virtualization; wireless and mobile systems including IoT, drones, and sensors; privacy preserving networks; network security and anticensorship; computer architecture security; autonomous and software-defined networks; automotive and telematics systems; social computing; data analytics; distributed and embedded machine learning and computer vision; and cybersafety and cyberbullying.</p>
     </div>
 </section>
-
 
 <!-- Research Areas Section -->
 <section id="research-areas" class="container py-5">
@@ -45,26 +44,21 @@ layout: default_style
                      style="min-height: 370px; display: flex; flex-direction: column; justify-content: space-between; margin-bottom: 30px; padding: 20px; border: 1px solid #ccc; border-radius: 10px; text-align: center;">
 
                     {% if prof.image_url %}
-                    <img src="{{ prof.image_url }}" alt="{{ prof.name }}" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px;">
+                    <img src="{{ prof.image_url | relative_url }}" alt="{{ prof.name }}" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px;">
                     {% else %}
-                    <img src="/assets/img/faculty/default.jpg" alt="No photo available" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px; opacity: 0.5;">
+                    <img src="{{ '/assets/img/faculty/default.jpg' | relative_url }}" alt="No photo available" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px; opacity: 0.5;">
                     {% endif %}
 
                     <h3 style="margin-bottom: 10px;">{{ prof.name }}</h3>
-
-                    {% if prof.status %}
-                    <p style="font-style: italic; font-weight: bold; color: #666; margin-bottom: 10px;">{{ prof.status }}</p>
-                    {% endif %}
 
                     {% if prof.website %}
                     <p><a href="{{ prof.website }}" target="_blank">Website</a></p>
                     {% endif %}
 
                     {% if prof.areas %}
-                        {% for area in prof.areas %}
-                        {{ area }}{% if forloop.last == false %}, {% endif %}
-                        {% endfor %}
-                    </p>
+                    {% for area in prof.areas %}
+                    {{ area }}{% if forloop.last == false %}, {% endif %}
+                    {% endfor %}
                     {% endif %}
                 </div>
             </div>
@@ -72,41 +66,6 @@ layout: default_style
         </div>
     </div>
 </section>
-
-
-<!-- Students -->
-<!--<section id="students" class="section-global-wrapper">-->
-<!--    <div class="container">-->
-<!--        <h1 class="title-text">Students</h1>-->
-<!--        <hr />-->
-<!--        <div class="row">-->
-<!--            {% for student in site.data.students %}-->
-<!--            <div class="col-md-4 col-sm-6">-->
-<!--                <div class="card student-card d-flex flex-column justify-content-between"-->
-<!--                     style="height: 100%; min-height: 370px; display: flex; flex-direction: column; justify-content: space-between; margin-bottom: 30px; padding: 20px; border: 1px solid #ccc; border-radius: 10px; text-align: center;">-->
-
-<!--                    {% if student.image_url %}-->
-<!--                    <img src="{{ student.image_url }}" alt="{{ student.name }}" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px;">-->
-<!--                    {% else %}-->
-<!--                    <img src="/assets/img/students/default.jpg" alt="No photo available" style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin-bottom: 15px; opacity: 0.5;">-->
-<!--                    {% endif %}-->
-
-<!--                    <h3 style="margin-bottom: 10px;">{{ student.name }}</h3>-->
-
-<!--                    {% if student.url %}-->
-<!--                    <p><a href="{{ student.url }}" target="_blank">Profile</a></p>-->
-<!--                    {% endif %}-->
-
-<!--                    {% if student.area %}-->
-<!--                    <p><strong>Area:</strong> {{ student.area }}</p>-->
-<!--                    {% endif %}-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            {% endfor %}-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
 
 <!-- Contact Section -->
 <section id="contact" class="section-global-wrapper">
@@ -116,7 +75,7 @@ layout: default_style
 
         <div class="row">
             <div class="col-md-4">
-                <img src="/assets/img/systems-lab-map.png" alt="Lab Map" class="img-fluid rounded mb-3" width="100%" />
+                <img src="{{ '/assets/img/systems-lab-map.png' | relative_url }}" alt="Lab Map" class="img-fluid rounded mb-3" width="100%" />
                 <h4>Directions</h4>
                 <p>
                     The Computer Systems @ CU lab is in the ground/basement ("1B") level of the Engineering Center.
