--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ layout: default_style
 <body>
 <div class="text-center" style="margin-top: 10px;">
     <a href="#about" class="text-primary" style="margin-right: 15px;"><strong>About</strong></a>
-    <a href="#research-areas" class="text-primary" style="margin-right: 15px;"><strong>Research Areas</strong></a>
     <a href="#faculty" class="text-primary" style="margin-right: 15px;"><strong>Faculty</strong></a>
-    <a href="{{ '/gallery' | relative_url }}" class="text-primary" style="margin-right: 15px;"><strong>Gallery</strong></a>
-    <a href="#contact" class="text-primary"><strong>Contact Us</strong></a>
+    <a href="#research-areas" class="text-primary" style="margin-right: 15px;"><strong>Research Areas</strong></a>
+    <a href="#gallery" class="text-primary" style="margin-right: 15px;"><strong>Gallery</strong></a>
+<!--    <a href="{{ '/gallery' | relative_url }}" class="text-primary" style="margin-right: 15px;"><strong>Gallery</strong></a>-->
+
+<!--    <a href="#contact" class="text-primary"><strong>Contact Us</strong></a>-->
 </div>
 
 <!-- Lab banner image -->
@@ -25,11 +27,6 @@ layout: default_style
         <p>Most of the Systems faculty are co-located in a single large lab with their students.</p>
         <p>Students and faculty receive funding for and work in areas including large scale network systems; cloud and edge computing; distributed systems; virtualization; wireless and mobile systems including IoT, drones, and sensors; privacy preserving networks; network security and anticensorship; computer architecture security; autonomous and software-defined networks; automotive and telematics systems; social computing; data analytics; distributed and embedded machine learning and computer vision; and cybersafety and cyberbullying.</p>
     </div>
-</section>
-
-<!-- Research Areas Section -->
-<section id="research-areas" class="container py-5">
-    {% include area.html %}
 </section>
 
 <!-- Faculty -->
@@ -67,38 +64,74 @@ layout: default_style
     </div>
 </section>
 
+<!-- Research Areas Section -->
+<section id="research-areas" class="container py-5">
+    {% include area.html %}
+</section>
+
+
+
 <!-- Contact Section -->
-<section id="contact" class="section-global-wrapper">
-    <div class="container">
-        <h1 class="title-text">Contact Us</h1>
-        <hr />
+<!--<section id="contact" class="section-global-wrapper">-->
+<!--    <div class="container">-->
+<!--        <h1 class="title-text">Contact Us</h1>-->
+<!--        <hr />-->
+
+<!--        <div class="row">-->
+<!--            <div class="col-md-4">-->
+<!--                <img src="{{ '/assets/img/systems-lab-map.png' | relative_url }}" alt="Lab Map" class="img-fluid rounded mb-3" width="100%" />-->
+<!--                <h4>Directions</h4>-->
+<!--                <p>-->
+<!--                    The Computer Systems @ CU lab is in the ground/basement ("1B") level of the Engineering Center.-->
+<!--                    The easiest entrance to locate is through the door in the courtyard, as shown. Immediately-->
+<!--                    on entering that door, you'll find a hallway to the left that leads to the faculty offices,-->
+<!--                    meeting rooms and student lab.-->
+<!--                </p>-->
+<!--            </div>-->
+
+<!--            <div class="col-md-8 mb-4">-->
+<!--                <iframe width="100%" height="450px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"-->
+<!--                        src="{{ site.google_map }}"></iframe>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="row mt-4">-->
+<!--            <div class="col-lg-6">-->
+<!--                <h4>Find us at:</h4>-->
+<!--                <p class="block-author">{{ site.company_name }}</p>-->
+<!--                <p>{{ site.address_line }}</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+<!-- Gallery Title -->
+<section id="gallery" class="container py-5">
+<div class="container">
+    <h1 class="title-text">Gallery</h1>
+    <hr />
+</div>
+
+<!-- Gallery Content -->
+<div class="container">
+    {% for item in site.data.gallery %}
+    <div class="mb-5">
+        <h3 class="mb-3">{{ item.title }}</h3>
+        <p>{{ item.description }}</p>
 
         <div class="row">
-            <div class="col-md-4">
-                <img src="{{ '/assets/img/systems-lab-map.png' | relative_url }}" alt="Lab Map" class="img-fluid rounded mb-3" width="100%" />
-                <h4>Directions</h4>
-                <p>
-                    The Computer Systems @ CU lab is in the ground/basement ("1B") level of the Engineering Center.
-                    The easiest entrance to locate is through the door in the courtyard, as shown. Immediately
-                    on entering that door, you'll find a hallway to the left that leads to the faculty offices,
-                    meeting rooms and student lab.
-                </p>
+            {% for image in item.image_url %}
+            <div class="col-md-4 col-sm-6 mb-4">
+                <img src="{{ image | relative_url }}"
+                     alt="{{ item.title }}"
+                     class="img-fluid rounded shadow-sm"
+                     style="width: 100%; height: auto; border-radius: 8px;">
             </div>
-
-            <div class="col-md-8 mb-4">
-                <iframe width="100%" height="450px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                        src="{{ site.google_map }}"></iframe>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col-lg-6">
-                <h4>Find us at:</h4>
-                <p class="block-author">{{ site.company_name }}</p>
-                <p>{{ site.address_line }}</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
+    {% endfor %}
+</div>
 </section>
 
 </body>
