--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@ layout: default_style
     <div class="container">
         <h2 class="title-text">About Computer Systems Lab @ CU</h2>
         <hr />
-        <p>The Computer Systems Lab at CU consists of about 14 faculty whose expertise generally lies in building practical computer systems.</p>
-        <p>Most of the Systems faculty are co-located in a single large lab with their students.</p>
-        <p>Students and faculty receive funding for and work in areas including large scale network systems; cloud and edge computing; distributed systems; virtualization; wireless and mobile systems including IoT, drones, and sensors; privacy preserving networks; network security and anticensorship; computer architecture security; autonomous and software-defined networks; automotive and telematics systems; social computing; data analytics; distributed and embedded machine learning and computer vision; and cybersafety and cyberbullying.</p>
+<!--        <p>The Computer Systems Lab at CU consists of about 14 faculty whose expertise generally lies in building practical computer systems.</p>-->
+<!--        <p>Most of the Systems faculty are co-located in a single large lab with their students.</p>-->
+<!--        <p>Students and faculty receive funding for and work in areas including large scale network systems; cloud and edge computing; distributed systems; virtualization; wireless and mobile systems including IoT, drones, and sensors; privacy preserving networks; network security and anticensorship; computer architecture security; autonomous and software-defined networks; automotive and telematics systems; social computing; data analytics; distributed and embedded machine learning and computer vision; and cybersafety and cyberbullying.</p>-->
+          <p> The Computer Systems Lab at CU consists of about 12 faculty whose expertise generally lies in building practical computer systems.</p>
+          <p> Most of the Systems faculty share a large, collaborative lab space with their students.</p>
+          <p> Together, faculty and students pursue funded research across a broad range of areas, including Networking, Wireless and Mobile Systems, Machine Learning Systems and Infrastructure, Data and IoT Analytics, Storage, Memory and Nonvolatile Systems, Control and Optimization of Complex Systems, Privacy, Policy and Social Computing, Quantum Computing, Anticensorship and Software Security, and Hardware and Microarchitectural Security.</p>
     </div>
 </section>
 
